k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-profile-service
spec:
  selector:
    app: devops-profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
